First attempts at using the builder show a lot of promise, but plenty of work to do.
Created 3 planets (incomplete)